# LD35

./: CMakeLists.txt  README.md  app.config  opifex.json
Android/Make/: Application.mk  build.xml
Assets/Models/: ground.opm  ground2.opm  house01.opm  human.opm  ld35person.opm.Attack.anim  ld35person.opm.Idle.anim  ld35skeleton.opm  ld35skeleton.opm.Idle.anim  ld35skeleton.opm.skel  ld35wolf.opm  ld35wolf.opm.Attack.anim  ld35wolf.opm.Howl.anim  ld35wolf.opm.Idle.anim  ld35wolf.opm.Walk.anim  ld35wolf.opm.skel
Assets/Shaders/OPENGL_2_0/: ColoredModel.frag  ColoredModel.vert  Font.frag  SimpleModel.frag  SimpleModel.vert  SimpleTextured.vert  Skinning.frag  Skinning.vert  SpriteSheet.frag  Textured.frag  TexturedModel.frag  TexturedModel.vert  TexturedScreen.vert  TexturedSpecular.frag  TexturedSpecular.vert
Assets/Shaders/OPENGL_3_3/: Font.frag  SimpleModel.frag  SimpleModel.vert  Skinning.frag  Skinning.vert  SpriteSheet.frag  Textured.frag  TexturedScreen.vert  TexturedSpecular.frag  (+2 more)
Assets/Sprites/: gui.opss  mousekb.opss
Assets/Textures/: ld35person.opm.Idle2.anim
Assets/Web/: index.html
CMake/: application.cmake  assets.cmake
Docs/: Card.psd  CardTemplate.psd  CardTemplateSkeleton.psd  DevilsHowl.psd  GUI.psd  P1GUI.psd  P2GUI.psd  Skeleton.psd  Wolf.psd  controller.psd  keys.psd  mouse.psd  mousekeyboardgui.psd
iOS/OPengine/: GameViewController.mm
src/: GameState.cpp  GameState.h  Main.cpp  Main.h
src/game/: Card.h  CardDesc.h  Character.h  Deck.h  Enemy.cpp  Enemy.h  Global.cpp  Global.h  Physics.h  Player.cpp  Player.h  Scene.cpp  Scene.h
(+41 files in other folders)
